added: key metrics

--- a/index.html
+++ b/index.html
@@ -77,6 +77,82 @@
 
     </section>
 
+    <!-- KEY METRICS -->
+    <section id="metrics" class="panel2 panel2--metrics">
+      <div class="wrap">
+        <div class="sectionTitle reveal">
+          <h2>Key Metrics</h2>
+          <div class="sectionRule" aria-hidden="true"></div>
+        </div>
+
+        <div class="metricsCarousel" aria-label="Key metrics carousel">
+          <div class="metricsTrack" data-metric-track data-marquee-direction="left">
+            <article class="metricTile metricTile--image">
+              <img src="https://i.pinimg.com/736x/cd/a5/08/cda508fafc87c2eb5671b7dda0362e63.jpg" alt="Attendees">
+            </article>
+            <article class="metricTile metricTile--stat">
+              <div class="metricTile__value">1 DAY</div>
+              <div class="metricTile__label">Summit</div>
+            </article>
+            <article class="metricTile metricTile--image">
+              <img src="https://i.pinimg.com/736x/6a/61/99/6a6199e57779fec9cb78ecf42600f2a0.jpg" alt="Speakers">
+            </article>
+            <article class="metricTile metricTile--stat">
+              <div class="metricTile__value">8+</div>
+              <div class="metricTile__label">Curated sessions</div>
+            </article>
+            <article class="metricTile metricTile--image">
+              <img src="https://i.pinimg.com/736x/26/cc/f1/26ccf1b341fe22b47fb7c751109a6ce3.jpg" alt="Delegates">
+            </article>
+            <article class="metricTile metricTile--stat">
+              <div class="metricTile__value">40+</div>
+              <div class="metricTile__label">Speakers and panelists</div>
+            </article>
+            <article class="metricTile metricTile--image">
+              <img src="https://i.pinimg.com/736x/d6/7a/ba/d67aba1d6541fe48292432cb7f442264.jpg" alt="Sessions">
+            </article>
+            <article class="metricTile metricTile--stat">
+              <div class="metricTile__value">150+</div>
+              <div class="metricTile__label">Delegates and participants</div>
+            </article>
+          </div>
+        </div>
+
+        <div class="metricsCarousel metricsCarousel--alt" aria-label="Key metrics carousel alternate">
+          <div class="metricsTrack" data-metric-track data-marquee-direction="right">
+            <article class="metricTile metricTile--stat">
+              <div class="metricTile__value">2nd</div>
+              <div class="metricTile__label">Edition</div>
+            </article>
+            <article class="metricTile metricTile--image">
+              <img src="https://i.pinimg.com/736x/24/14/bb/2414bb946243044df3a056ef7d903c4b.jpg" alt="Summit highlight">
+            </article>
+            <article class="metricTile metricTile--stat">
+              <div class="metricTile__value">13 Mar</div>
+              <div class="metricTile__label">2026</div>
+            </article>
+            <article class="metricTile metricTile--image">
+              <img src="https://i.pinimg.com/736x/1c/1d/7a/1c1d7a350ae793ec7f26d333e9873a73.jpg" alt="Networking">
+            </article>
+            <article class="metricTile metricTile--stat">
+              <div class="metricTile__value">Dehradun</div>
+              <div class="metricTile__label">Uttarakhand</div>
+            </article>
+            <article class="metricTile metricTile--image">
+              <img src="https://i.pinimg.com/736x/1b/6b/ad/1b6bad70509bfad224378564da34d6c0.jpg" alt="Keynote">
+            </article>
+            <article class="metricTile metricTile--stat">
+              <div class="metricTile__value">100+</div>
+              <div class="metricTile__label">Institutions</div>
+            </article>
+            <article class="metricTile metricTile--image">
+              <img src="https://i.pinimg.com/736x/6b/d9/6a/6bd96a98d1748ff3c4f45eb8e3c6ef7c.jpg" alt="Panels">
+            </article>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- ABOUT -->
     <section id="about" class="panel2 panel2--teal">
       <div class="wrap panel2__inner">
