done refinements: ankush's iterations

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
         <a href="#speakers">Speakers</a>
         <a href="#insights">Insights</a>
         <a href="#why">Why Attend</a>
-        <a href="#awards">Awards</a>
         <a href="#contact">Contact</a>
         <a class="pill" href="#contact">Register</a>
       </nav>
@@ -178,6 +177,21 @@
             on the ground.
           </p>
         </div>
+
+        <div class="aboutGallery reveal" aria-label="About us highlights">
+          <div class="aboutGallery__item">
+            <img src="allImages/23.png" alt="Summit highlight">
+          </div>
+          <div class="aboutGallery__item">
+            <img src="allImages/24.png" alt="Healthcare discussion">
+          </div>
+          <div class="aboutGallery__item">
+            <img src="allImages/25.png" alt="Community care">
+          </div>
+          <div class="aboutGallery__item">
+            <img src="allImages/26.png" alt="Leadership panel">
+          </div>
+        </div>
       </div>
     </section>
 
@@ -189,16 +203,16 @@
           <div class="sectionRule" aria-hidden="true"></div>
         </div>
 
-        <div class="focusGrid reveal">
-          <div class="focusItem">Mountain-ready healthcare delivery &amp; disaster / emergency preparedness</div>
-          <div class="focusItem">Prevention, screening &amp; non-communicable diseases (NCDs)</div>
-          <div class="focusItem">Diagnostics &amp; tertiary care access through public-private partnerships</div>
-          <div class="focusItem">Digital health &amp; telemedicine with ground-level adoption</div>
-          <div class="focusItem">National Health Mission (NHM) as a system integrator</div>
-          <div class="focusItem">Healthcare workforce, skills development &amp; well-being</div>
-          <div class="focusItem">Health system governance, data &amp; implementation excellence</div>
-          <div class="focusItem">CSR &amp; healthcare financing for sustainable and inclusive care</div>
-          <div class="focusItem">AYUSH &amp; traditional medicine integration for preventive, holistic &amp; community care</div>
+        <div class="focusGrid reveal" data-focus-grid>
+          <div class="focusTile">Mountain-ready healthcare delivery &amp; disaster / emergency preparedness</div>
+          <div class="focusTile">Prevention, screening &amp; non-communicable diseases (NCDs)</div>
+          <div class="focusTile">Diagnostics &amp; tertiary care access through public-private partnerships</div>
+          <div class="focusTile">Digital health &amp; telemedicine with ground-level adoption</div>
+          <div class="focusTile">National Health Mission (NHM) as a system integrator</div>
+          <div class="focusTile">Healthcare workforce, skills development &amp; well-being</div>
+          <div class="focusTile">Health system governance, data &amp; implementation excellence</div>
+          <div class="focusTile">CSR &amp; healthcare financing for sustainable and inclusive care</div>
+          <div class="focusTile">AYUSH &amp; traditional medicine integration for preventive, holistic &amp; community care</div>
         </div>
       </div>
     </section>
@@ -209,12 +223,12 @@
         <div class="marquee-heading" aria-label="Sponsors and partners marquee">
           <div class="marquee-heading__inner">
             <div class="marquee-heading__group">
-              <span>PARTNER</span><span class="dot">✺</span>
-              <span>PARTNER</span><span class="dot">✺</span>
+              <span>PREVIOUS PARTNERS</span><span class="dot">✺</span>
+              <span>PREVIOUS PARTNERS</span><span class="dot">✺</span>
             </div>
             <div class="marquee-heading__group" aria-hidden="true">
-              <span>PARTNER</span><span class="dot">✺</span>
-              <span>PARTNER</span><span class="dot">✺</span>
+              <span>PREVIOUS PARTNERS</span><span class="dot">✺</span>
+              <span>PREVIOUS PARTNERS</span><span class="dot">✺</span>
             </div>
           </div>
         </div>
@@ -797,61 +811,6 @@
       </div>
     </section>
 
-    <!-- Awards -->
-    <section id="awards" class="panel2 panel2--awards">
-      <div class="wrap">
-        <div class="sectionTitle sectionTitle--centered reveal">
-          <h2>UKHIS 2026 Awards</h2>
-          <div class="sectionRule" aria-hidden="true"></div>
-        </div>
-        <p class="panel2__copy panel2__copy--dark reveal">
-          Healthcare Innovation &amp; Healthcare Heroes Awards 2026 recognise deployable innovation and sustained service excellence that strengthen healthcare access, equity, quality, and resilience - particularly in hill and remote geographies.
-        </p>
-        <div class="awardsGrid reveal">
-          <article class="awardColumn">
-            <h3>Healthcare Innovation Awards - Categories (15)</h3>
-            <ol>
-              <li>Healthcare Innovation for Hill &amp; Remote Geographies Award</li>
-              <li>Digital Health &amp; Telemedicine Excellence Award</li>
-              <li>AI-Enabled Diagnostics &amp; Decision Support Innovation Award</li>
-              <li>MedTech Innovation for Resource-Constrained Settings Award</li>
-              <li>Public-Private Partnership (PPP) in Healthcare Excellence Award</li>
-              <li>NCD Prevention &amp; Early Detection Innovation Award</li>
-              <li>Mental Health Innovation &amp; Digital Care Award</li>
-              <li>Emergency &amp; Disaster Healthcare Innovation Award</li>
-              <li>AYUSH &amp; Integrative Medicine Innovation Award</li>
-              <li>Community-Centric Preventive Healthcare Innovation Award</li>
-              <li>Healthcare Workforce &amp; Training Innovation Award</li>
-              <li>Health System Data, Analytics &amp; Governance Innovation Award</li>
-              <li>CSR-Led Healthcare Innovation Award</li>
-              <li>Startup of the Year - Healthcare &amp; Life Sciences</li>
-              <li>Innovator of the Year - Healthcare Systems &amp; Technology</li>
-            </ol>
-          </article>
-          <article class="awardColumn">
-            <h3>Healthcare Heroes Awards - Categories (15)</h3>
-            <ol>
-              <li>Outstanding Frontline Health Worker Award</li>
-              <li>Excellence in Rural &amp; Community Healthcare Delivery</li>
-              <li>Public Sector Leadership in Healthcare Award</li>
-              <li>Hospital Excellence in Patient-Centric Care Award</li>
-              <li>NGO / Development Organisation Impact Award</li>
-              <li>AYUSH Practitioner / Institution of the Year Award</li>
-              <li>Mental Health Champion Award</li>
-              <li>Excellence in Maternal &amp; Child Health Services Award</li>
-              <li>Healthcare Workforce Well-being &amp; Leadership Award</li>
-              <li>Women Leadership in Healthcare Award</li>
-              <li>Young Healthcare Changemaker Award</li>
-              <li>CSR Leadership in Healthcare Services Award</li>
-              <li>Excellence in Preventive &amp; Wellness Healthcare Award</li>
-              <li>Excellence in Healthcare Delivery in Difficult Terrain Award</li>
-              <li>Lifetime Contribution to Healthcare Services Award</li>
-            </ol>
-          </article>
-        </div>
-      </div>
-    </section>
-
     <!-- Contact -->
     <section id="contact" class="panel2 panel2--contact">
       <div class="wrap">
@@ -879,57 +838,6 @@
             <div class="contactRow">Email: s.babbar@veloxxmedia.com</div>
           </div>
         </div>
-      </div>
-    </section>
-
-    <!-- Grievance form -->
-    <section id="grievance" class="panel2 panel2--teal">
-      <div class="wrap">
-        <div class="grievanceHeader sectionTitle--centered reveal">
-          <h2>File a grievance</h2>
-          <p>Select the level, department, category, and sub-category to route your issue correctly.</p>
-        </div>
-
-        <form class="grievanceForm reveal" id="grievanceForm" novalidate>
-          <div class="grievanceForm__row">
-            <label for="grievanceLevel">Government level</label>
-            <select id="grievanceLevel" required>
-              <option value="">Select level</option>
-              <option value="CENTRAL">Central Government</option>
-              <option value="STATE">State Government</option>
-            </select>
-          </div>
-
-          <div class="grievanceForm__row" data-state-row hidden>
-            <label for="grievanceState">State (for state-level)</label>
-            <select id="grievanceState">
-              <option value="">All states</option>
-            </select>
-          </div>
-
-          <div class="grievanceForm__row">
-            <label for="grievanceDepartment">Department</label>
-            <select id="grievanceDepartment" disabled>
-              <option value="">Select department</option>
-            </select>
-          </div>
-
-          <div class="grievanceForm__row">
-            <label for="grievanceCategory">Category</label>
-            <select id="grievanceCategory" disabled>
-              <option value="">Select category</option>
-            </select>
-          </div>
-
-          <div class="grievanceForm__row">
-            <label for="grievanceSubCategory">Sub-category</label>
-            <select id="grievanceSubCategory" disabled>
-              <option value="">Select sub-category</option>
-            </select>
-          </div>
-
-          <div class="grievanceForm__status" data-grievance-status>Loading departments…</div>
-        </form>
       </div>
     </section>
 
