refined: ankush's iterations, added: awards page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <a href="#focus">Focus Areas</a>
         <a href="#speakers">Speakers</a>
         <a href="#insights">Insights</a>
-        <a href="#why">Why Attend</a>
+        <a href="#why">To Attend</a>
+        <a href="awards.html">Awards</a>
         <a href="#contact">Contact</a>
         <a class="pill" href="#contact">Register</a>
       </nav>
@@ -180,16 +181,16 @@
 
         <div class="aboutGallery reveal" aria-label="About us highlights">
           <div class="aboutGallery__item">
-            <img src="allImages/23.png" alt="Summit highlight">
+            <img src="aboutImages/about-1.jpg" alt="Summit highlight">
           </div>
           <div class="aboutGallery__item">
-            <img src="allImages/24.png" alt="Healthcare discussion">
+            <img src="aboutImages/about-2.jpg" alt="Healthcare discussion">
           </div>
           <div class="aboutGallery__item">
-            <img src="allImages/25.png" alt="Community care">
+            <img src="aboutImages/about-3.jpg" alt="Community care">
           </div>
           <div class="aboutGallery__item">
-            <img src="allImages/26.png" alt="Leadership panel">
+            <img src="aboutImages/about-4.jpg" alt="Leadership panel">
           </div>
         </div>
       </div>
@@ -284,7 +285,7 @@
       </div>
       <div class="wrap_speaker">
         <div class="speakerGroup reveal">
-          <div class="speakerGroup__title">Important People</div>
+          <div class="speakerGroup__title">Distinguished Guests</div>
           <div class="speakerGrid speakerGrid--featured">
             <article class="speakerCard">
               <div class="speakerCard__photo"><img src="allImages/19.png" alt="Lt. Gen Gurmit Singh"></div>
@@ -844,13 +845,35 @@
     <!-- Footer -->
     <footer class="footer2">
       <div class="wrap footer2__inner">
-        <div class="footer2__brand">VELOXX</div>
-        <div class="footer2__meta">
-          <span>Uttarakhand Healthcare Innovation Summit</span>
-          <span class="sep">•</span>
-          <span>Building health systems for every altitude</span>
+        <div class="footer2__brandBlock">
+          <div class="footer2__brand">VELOXX</div>
+          <p class="footer2__tagline">Uttarakhand Healthcare &amp; Innovation Summit 2026</p>
         </div>
-        <div class="footer2__fine">© 2026 • All rights reserved</div>
+
+        <div class="footer2__columns">
+          <div class="footer2__col">
+            <div class="footer2__title">Summit</div>
+            <a href="#about">About</a>
+            <a href="#metrics">Key Metrics</a>
+            <a href="#focus">Focus Areas</a>
+            <a href="#speakers">Speakers</a>
+            <a href="#insights">Insights</a>
+          </div>
+          <div class="footer2__col">
+            <div class="footer2__title">Explore</div>
+            <a href="#why">Why Attend</a>
+            <a href="#who">Who Will Be There</a>
+            <a href="#contact">Contact</a>
+            <a href="#top">Back to Top</a>
+          </div>
+          <div class="footer2__col footer2__col--cta">
+            <div class="footer2__title">Connect</div>
+            <p>Dehradun, Uttarakhand ? 13 March 2026</p>
+            <a class="footer2__cta" href="#contact">Register interest</a>
+          </div>
+        </div>
+
+        <div class="footer2__fine">? 2026 Veloxx Media. All rights reserved.</div>
       </div>
     </footer>
   </main>
