refined: devesh's refinements

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
       <div class="hero2__headline reveal">
         <h1 class="heroH1">
-          <span class="heroH1__line1">Healthcare,&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-          <span class="heroH1__line2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;for the Himalayas</span>
+          <span class="heroH1__line1">Healthcare,</span>
+          <span class="heroH1__line2">for the Himalayas</span>
         </h1>
       </div>
 
