refined: ankush's iterations 3

--- a/awards.html
+++ b/awards.html
@@ -26,11 +26,11 @@
 
       <nav class="nav-links" data-nav-links>
         <a href="index.html#about">About</a>
-        <a href="index.html#metrics">Metrics</a>
+        <a href="index.html#metrics"Key Metrics</a>
         <a href="index.html#focus">Focus Areas</a>
         <a href="index.html#speakers">Speakers</a>
         <a href="index.html#insights">Insights</a>
-        <a href="index.html#why">To Attend</a>
+        <a href="index.html#why">Why To Attend</a>
         <a href="awards.html">Awards</a>
         <a href="index.html#contact">Contact</a>
         <a class="pill" href="index.html#contact">Register</a>
