--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
       <nav class="nav-links" data-nav-links>
         <a href="#about">About</a>
-        <a href="#metrics">Metrics</a>
+        <a href="#metrics"Key Metrics</a>
         <a href="#focus">Focus Areas</a>
         <a href="#speakers">Speakers</a>
         <a href="#insights">Insights</a>
-        <a href="#why">To Attend</a>
+        <a href="#why">Why To Attend</a>
         <a href="awards.html">Awards</a>
         <a href="#contact">Contact</a>
         <a class="pill" href="#contact">Register</a>
@@ -68,8 +68,8 @@
 
       <div class="hero2__headline reveal">
         <h1 class="heroH1">
-          <span class="heroH1__line1">Healthcare,</span>
-          <span class="heroH1__line2">for the Himalayas</span>
+          <span class="heroH1__line1">Healthcare,<span class="heroH1__spacer" aria-hidden="true">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span>
+          <span class="heroH1__line2"><span class="heroH1__spacer heroH1__spacer--lead" aria-hidden="true">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>for the Himalayas</span>
         </h1>
       </div>
 
@@ -205,15 +205,33 @@
         </div>
 
         <div class="focusGrid reveal" data-focus-grid>
-          <div class="focusTile">Mountain-ready healthcare delivery &amp; disaster / emergency preparedness</div>
-          <div class="focusTile">Prevention, screening &amp; non-communicable diseases (NCDs)</div>
-          <div class="focusTile">Diagnostics &amp; tertiary care access through public-private partnerships</div>
-          <div class="focusTile">Digital health &amp; telemedicine with ground-level adoption</div>
-          <div class="focusTile">National Health Mission (NHM) as a system integrator</div>
-          <div class="focusTile">Healthcare workforce, skills development &amp; well-being</div>
-          <div class="focusTile">Health system governance, data &amp; implementation excellence</div>
-          <div class="focusTile">CSR &amp; healthcare financing for sustainable and inclusive care</div>
-          <div class="focusTile">AYUSH &amp; traditional medicine integration for preventive, holistic &amp; community care</div>
+          <div class="focusTile focusTile--image">
+            <img src="https://i.pinimg.com/736x/cd/a5/08/cda508fafc87c2eb5671b7dda0362e63.jpg" alt="Healthcare outreach">
+          </div>
+          <div class="focusTile focusTile--image">
+            <img src="https://i.pinimg.com/736x/6a/61/99/6a6199e57779fec9cb78ecf42600f2a0.jpg" alt="Community care">
+          </div>
+          <div class="focusTile focusTile--image">
+            <img src="https://i.pinimg.com/736x/26/cc/f1/26ccf1b341fe22b47fb7c751109a6ce3.jpg" alt="Rural clinic">
+          </div>
+          <div class="focusTile focusTile--image">
+            <img src="https://i.pinimg.com/736x/d6/7a/ba/d67aba1d6541fe48292432cb7f442264.jpg" alt="Healthcare team">
+          </div>
+          <div class="focusTile focusTile--image">
+            <img src="https://i.pinimg.com/736x/24/14/bb/2414bb946243044df3a056ef7d903c4b.jpg" alt="Medical support">
+          </div>
+          <div class="focusTile focusTile--image">
+            <img src="https://i.pinimg.com/736x/1c/1d/7a/1c1d7a350ae793ec7f26d333e9873a73.jpg" alt="Primary care">
+          </div>
+          <div class="focusTile focusTile--image">
+            <img src="https://i.pinimg.com/736x/1b/6b/ad/1b6bad70509bfad224378564da34d6c0.jpg" alt="Health workers">
+          </div>
+          <div class="focusTile focusTile--image">
+            <img src="https://i.pinimg.com/736x/6b/d9/6a/6bd96a98d1748ff3c4f45eb8e3c6ef7c.jpg" alt="Field clinic">
+          </div>
+          <div class="focusTile focusTile--image">
+            <img src="https://i.pinimg.com/736x/52/37/cf/5237cf1a0035789e5d0fa6126a804aa6.jpg" alt="Care delivery">
+          </div>
         </div>
       </div>
     </section>
@@ -868,7 +886,7 @@
           </div>
           <div class="footer2__col footer2__col--cta">
             <div class="footer2__title">Connect</div>
-            <p>Dehradun, Uttarakhand ? 13 March 2026</p>
+            <p>Dehradun, Uttarakhand - 13 March 2026</p>
             <a class="footer2__cta" href="#contact">Register interest</a>
           </div>
         </div>
